[project]
name = "ugpdf"
version = "1.0.0"
description = "Download Ultimate Guitar tabs as clean, print-ready PDFs from the command line."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = ["guitar", "tabs", "pdf", "ultimate-guitar", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "playwright>=1.40",
    "playwright-stealth>=2.0",
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
ugpdf = "ugpdf.cli:main"

[project.urls]
Repository = "https://github.com/yourusername/ugpdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ugpdf"]
